<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <LinearLayout
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textStyle="bold"
            android:layout_marginTop="38dp"
            android:textSize="28sp"
            android:textColor="@color/colorBlackSteel"
            android:text="@string/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginBottom="8dp"
            android:text="@string/register_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <ProgressBar
            android:indeterminate="false"
            android:id="@+id/loading_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputLayout
            app:errorEnabled="true"
            android:id="@+id/in_name"
            app:boxBackgroundColor="@android:color/transparent"
            android:hint="@string/fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:maxLines="1"
                android:id="@+id/et_name"
                android:layout_height="wrap_content"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:errorEnabled="true"
            android:id="@+id/in_email"
            app:boxBackgroundColor="@android:color/transparent"
            android:hint="@string/hint_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:id="@+id/et_email"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            android:id="@+id/in_password"
            app:boxBackgroundColor="@android:color/transparent"
            android:hint="@string/hint_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:maxLines="1"
                android:inputType="textPassword"
                android:id="@+id/et_password"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            android:id="@+id/in_password_confirm"
            android:hint="@string/confirm_password"
            app:boxBackgroundColor="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:maxLines="1"
                android:inputType="textPassword"
                android:id="@+id/et_password_conf"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:text="@string/terms_and_condition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:text="@string/register"
            android:textAllCaps="false"
            android:layout_marginTop="8dp"
            android:layout_height="56dp"/>

    </LinearLayout>

</ScrollView>